Fixed bad position of the buttons confirm and cancel in dialogs on mobile

--- a/src/global-styles/dialog-styles.scss
+++ b/src/global-styles/dialog-styles.scss
@@ -2,22 +2,47 @@
 
     display: flex;
 
-}
+    flex-direction: column;
 
-.c-confirm{
+    height: 140px;
 
-    margin-right: auto;
+    justify-content: space-around;
 
-    
+    align-items: center;
+
 }
 
 .c-close{
-
+    
     margin: 0 auto;
 }
 
-.c-cancel{
 
-    margin-left: auto;
+@media (min-width: 768px){
 
+    .c-confirm-or-cancel{
+
+        height: auto;
+
+        flex-direction: initial;
+
+        justify-content: initial;
+
+        align-items: initial;
+        
+    }
+
+    .c-confirm{
+
+        margin-right: auto;
+    
+        
+    }
+
+    .c-cancel{
+
+        margin-left: auto;
+    
+    }
+    
 }
